--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,7 @@ h2 {
 
 p {
  color: var(--primary-color);
+ background-color: var(--background-color);
 }
 
 .p__italic {
@@ -72,6 +73,7 @@ p {
 
 .p__highlight {
   color: var(--secondary-color);
+  background-color: var(--background-color);
   font-weight: var(--font-weight-regular);
 }
 
@@ -102,7 +104,7 @@ a:active {
   color: var(--secondary-color);
 }
 /* #### END OF Link styling #### */
-  
+
 .profile {
   max-width: 700px;
   margin: 0 auto;
@@ -194,7 +196,7 @@ a:active {
   z-index: 0;
 }
 /* #### END OF Navigation styling #### */
- 
+
 .grid {
   display: grid;
   /*grid-template-columns: 300px 300px 300px;
@@ -270,7 +272,7 @@ a:active {
     grid-column: auto / auto;
     grid-row: auto / auto;
   }
-  
+
   /* #### START OF Button styling #### */
 
     button, .button  {
@@ -293,8 +295,8 @@ a:active {
       transition-duration: 0.2s;
       transition-property: opacity;
 }
-     button:hover, 
-     button:focus, 
+     button:hover,
+     button:focus,
      .button:hover,
      .button:focus{
   /* lets the mouse appear as a hand when hovering over the button */
